--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "heroicons": "^2.1.5",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
@@ -21,8 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.10",
     "postcss": "^8",
